<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:orientation="vertical"
    android:paddingStart="@dimen/fragment_horizontal_margin"
    android:paddingEnd="@dimen/fragment_horizontal_margin"
    android:paddingBottom="@dimen/fragment_vertical_margin"
    tools:context=".ui.login.LoginFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/texto_titulo_iniciar_sesion"
        android:textAlignment="center"
        android:textAppearance="@style/titulo_inicia_sesion" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="@dimen/ancho_boton_principal"
        android:layout_height="@dimen/alto_boton_principal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_borde_inferior"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="32dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="@dimen/ancho_boton_principal"
        android:layout_height="@dimen/alto_boton_principal"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/et_borde_inferior"
        android:hint="@string/hint_contrasena"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="6dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/texto_olvidaste_contrasena"
        android:textAppearance="@style/texto_enlace" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="24dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_principal"
        android:elevation="12dp"
        android:text="@string/texto_iniciar_sesion"
        android:textAppearance="@style/texto_boton_principal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:text="@string/pregunta_tenes_cuenta"
        android:textAlignment="center"
        android:textSize="16sp"

        />


</androidx.appcompat.widget.LinearLayoutCompat>