<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.login.NombreDeUsuarioFragment">
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="361dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="24dp"
        android:text="@string/texto_necesitar_nombre"
        android:textColor="@color/color_principal"
        android:textAlignment="center"
        android:textAppearance="@style/titulo_nombre_usuario" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />
    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/avatar" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <EditText
        android:id="@+id/username2"
        android:layout_width="@dimen/ancho_boton_principal"
        android:layout_height="@dimen/alto_boton_principal"
        android:layout_gravity="center_horizontal"
        android:backgroundTint="@color/color_secuendario_b"
        android:hint="@string/nombre_de_usuario"
        android:inputType="textEmailAddress" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="60dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegistrarse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/boton_secundario"
        android:elevation="12dp"
        android:text="@string/texto_continuar"
        android:textAppearance="@style/texto_boton_principal"
        />

</LinearLayout>